<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="http://schemas.android.com/apk/res-auto">

    <string name="app_name">Sunshine</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="title_activity_details">Details</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_location_label">Location</string>
    <string name="pref_location_key">location</string>
    <string name="pref_location_default">32827</string>
    <string name="pref_temperature_label">Temperature</string>
    <string name="pref_temperature_key">temperature</string>
    <string name="pref_temperature_units_metric">metric</string>
    <string name="pref_temperature_units_imperial">imperial</string>
    <string name="pref_temperature_dialog">PICK YOUR UNITS</string>
    <string name="action_show_in_map">Show In Map</string>
    <string name="action_share">Share</string>

    <string-array name="pref_temperature_entries">
        <item>Metric</item>
        <item>Imperial</item>
    </string-array>

    <string-array name="pref_temperature_values">
        <item>metric</item>
        <item>imperial</item>
    </string-array>

    <!-- Date label when displaying today's weather forecast [CHAR LIMIT=20] -->
    <string name="today">Today</string>

    <!-- Date label when displaying tomorrow's weather forecast [CHAR LIMIT=20] -->
    <string name="tomorrow">Tomorrow</string>

    <!-- Date format for displaying day of week and date (i.e. Mon Jun 1) [CHAR LIMIT=20] -->
    <string name="format_full_friendly_date">
        <xliff:g id="day_of_week">%1$s</xliff:g>, <xliff:g id="date">%2$s</xliff:g>
    </string>

    <!-- Temperature formats -->
    <string name="format_temperature"><xliff:g id="temp">%1.0f</xliff:g>\u00B0</string>

    <!-- Windspeed format in mph [CHAR LIMIT=NONE] -->
    <string name="format_wind_mph">Wind: <xliff:g id="wind_speed">
        %1.0f</xliff:g> mph <xliff:g id="wind_dir">%2$s</xliff:g></string>

    <!-- Windspeed format in km/h [CHAR LIMIT=NONE] -->
    <string name="format_wind_kmh">Wind: <xliff:g id="wind_speed">
        %1.0f</xliff:g> km/h <xliff:g id="wind_dir">%2$s</xliff:g></string>

    <!-- Pressure format in hPa [CHAR LIMIT=NONE] -->
    <string name="format_pressure">Pressure: <xliff:g id="pressure">%1.0f</xliff:g> hPa</string>

    <!-- Humidity format in % [CHAR LIMIT=NONE] -->
    <string name="format_humidity">Humidity: <xliff:g id="humidity">%1.0f</xliff:g> %%</string>

</resources>
